--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <main>
         <section class="sedans">
-            <img src="./imagens/icon-sedans.svg" alt="">
-            <h2></h2>
-            <p></p>
-            <a href=""></a>
+            <img src="./imagens/icon-sedans.svg" alt="carro sedan">
+            <h2>Sedans</h2>
+            <p>Escolha um sedan pelo seu preço acessível e excelente economia de combustível. Ideal para dirigir na cidade ou na sua próxima viagem.</p>
+            <a href="">Ver mais</a>
         </section>
             <img src="" alt="">
             <h2></h2>
