Desenvolvimento do CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&family=Oxygen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Carros</title>
 </head>
@@ -22,7 +25,7 @@
             <a href="">Ver mais</a>
         </section>
 
-        <section class="luxosos">
+        <section class="luxuosos">
             <img src="./imagens/icon-luxury.svg" alt="carro de luxo">
             <h2>Luxuosos</h2>
             <p>Passeie nos melhores carros sem os preços exorbitantes. Desfrute do conforto aprimorado de um aluguel de luxo e chegue com estilo.</p>
