--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
             <img src="./imagens/icon-sedans.svg" alt="carro sedan">
             <h2>Sedans</h2>
             <p>Escolha um sedan pelo seu preço acessível e excelente economia de combustível. Ideal para dirigir na cidade ou na sua próxima viagem.</p>
-            <a href="">Ver mais</a>
+            <a href="https://www.webmotors.com.br/catalogo/carroceria/sedan/" target="_blank">Ver mais</a>
         </section>
         <section class="suvs">
             <img src="./imagens/icon-suvs.svg" alt="carro suv">
             <h2>SUVs</h2>
             <p>Escolha um SUV pelo seu interior espaçoso, poder e versatilidade. Perfeito para passar as férias em família ou para aventuras off-road.</p>
-            <a href="">Ver mais</a>
+            <a href="https://www.webmotors.com.br/catalogo/carroceria/suv/" target="_blank">Ver mais</a>
         </section>
 
         <section class="luxuosos">
             <img src="./imagens/icon-luxury.svg" alt="carro de luxo">
             <h2>Luxuosos</h2>
             <p>Passeie nos melhores carros sem os preços exorbitantes. Desfrute do conforto aprimorado de um aluguel de luxo e chegue com estilo.</p>
-            <a href="">Ver mais</a>
+            <a href="https://www.webmotors.com.br/carros-de-luxo/carros/mg-belo-horizonte?estadocidade=Minas%20Gerais%20-%20Belo%20Horizonte&necessidade=Carros%20de%20luxo&idcmpint=t1:c17:m07:busque-por-categorias::carros-de-luxo:comprar" target="_blank">Ver mais</a>
         </section>
 
     </main>
